<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBg">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonCreateAccount"
        app:layout_constraintTop_toBottomOf="@id/app_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/imageProfile"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/image"
                android:src="@drawable/ic_user_empty"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/progressBarForProfile"
                android:layout_width="45dp"
                android:layout_height="120dp"
                android:indeterminateDrawable="@drawable/loading_view"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ilyos.app.examplemvvm.utils.custom_views.CustomButton
                android:id="@+id/buttonChangePhoto"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/change_profile_photo"
                android:textAllCaps="false"
                android:textColor="@color/colorBlue"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageProfile" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buttonChangePhoto">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textColorHint="@color/colorGreyB3">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/rectangle_8_transparent_black"
                        android:fontFamily="@font/open_sans_reg"
                        android:hint="@string/first_name"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName"
                        android:textColor="@android:color/white"
                        android:textColorHint="@color/colorGreyB3"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textColorHint="@color/colorGreyB3">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputLastName"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/rectangle_8_transparent_black"
                        android:fontFamily="@font/open_sans_reg"
                        android:hint="@string/last_name"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName"
                        android:textColor="@android:color/white"
                        android:textColorHint="@color/colorGreyB3"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textColorHint="@color/colorGreyB3">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputEmail"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/rectangle_8_transparent_black"
                        android:fontFamily="@font/open_sans_reg"
                        android:hint="@string/email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:textColor="@android:color/white"
                        android:textColorHint="@color/colorGreyB3"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textColorHint="@color/colorGreyB3"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorRed">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rectangle_8_transparent_black"
                        android:fontFamily="@font/open_sans_reg"
                        android:hint="@string/password"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:textColor="@android:color/white"
                        android:textColorHint="@color/colorGreyB3"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorGreyB3"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorRed">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rectangle_8_transparent_black"
                        android:fontFamily="@font/open_sans_reg"
                        android:hint="@string/confirm_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:textColor="@android:color/white"
                        android:textColorHint="@color/colorGreyB3"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ilyos.app.examplemvvm.utils.custom_views.CustomButton
        android:id="@+id/buttonCreateAccount"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="24dp"
        android:backgroundTint="@color/colorRed"
        android:text="@string/create_account"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
